# FastRepo

backend/: README.md  pyproject.toml
backend/src/: app.py
backend/src/auth/: auth.py
backend/src/models/: repository.py  repository_collaborators.py  team.py  team_members.py  users.py
backend/src/routers/: git_cli.py  user.py
backend/src/schemas/: user.py
backend/src/services/: database.py  repository.py  user.py
backend/src/sqls/: user_sqls.py
backend/tests/: test_git_cli.py
frontend/: README.md
