[project]
name = "fastrepo"
version = "0.1.0"
description = "FastRepo is a code hosting and collaboration service using git version control system."
authors = [
    {name = "Shabit Zaman",email = "shabit855@gmail.com"},
    {name = "Sanonda Deb", email = "sanondadeb@gmail.com"}
]

packages = [
  {include = "src"}
]

license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "dulwich (>=1.2.10,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "fastapi[standard] (>=0.139.0,<0.140.0)"
]
